--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,3 +15,9 @@ p img
     margin: auto;
     max-width: 640px;
 }
+
+sup {
+    font-size: 65%;
+    vertical-align: super;
+    font-weight: bold;
+}
